# django-drf-education-platform

./: .env.example  README.md  pyproject.toml  test_urls.py
config/: celery.py  settings.py  urls.py
materials/: admin.py  models.py  paginators.py  serializers.py  signals.py  stripe_service.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_alter_course_options_alter_lesson_options_and_more.py  0004_alter_course_options_alter_lesson_options_and_more.py  0005_course_updated_at_subscription_is_active.py  0006_auto_20250920_1003.py
users/: admin.py  filters.py  managers.py  models.py  permissions.py  serializers.py  stripe_service.py  urls.py  views.py
users/management/commands/: create_groups.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_stripe_payment_status_and_more.py
