[tool.poetry]
name = "pythonproject14"
version = "0.1.0"
description = ""
authors = ["fantasticlion <den20020805@gmail.com>"]
readme = "README.md"
package-mode = false  # ← ДОБАВЬТЕ ЭТУ СТРОКУ!

[tool.poetry.dependencies]
python = "^3.13"
Django = "^5.0.4"
djangorestframework = "^3.15.1"
Pillow = "^10.4.0"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.5.1"
requests = "^2.32.5"
docutils = "^0.22"
drf-spectacular = "^0.28.0"
stripe = "^12.5.1"
python-dotenv = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"